<resources>
    <string name="app_name">Attendance</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_class">Add Class</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="class_name">Class Name</string>
    <string name="id">Id</string>
    <string name="student_name">Student Name</string>
    <string name="update_information">Update Information</string>
    <string name="save_attendance">Save Attendance</string>
    <string name="ap">AP</string>
    <string name="s">S</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="date">Date</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="add_stduents">Add Stduents</string>
</resources>