<?xml version="1.0" encoding="utf-8"?>
<!--item_class.xml-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:layout_marginTop="5dp"
    android:paddingLeft="16dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <!-- Class Name -->
    <TextView
        android:id="@+id/class_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/class_name"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintBottom_toTopOf="@id/class_description"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_chainStyle="packed"/>

    <!-- Edit Button -->
    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_edit_24"
        android:contentDescription="@string/edit"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_button" />

    <!-- Delete Button -->
    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_delete_24"
        android:contentDescription="@string/delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Class Description -->
    <TextView
        android:id="@+id/class_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Class Description"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/class_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Bottom Border -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
